# not-llama-fs

./: LICENSE  README.md  file_process_prompt.txt  pyproject.toml  requirements.txt  tree_generation_prompt.txt
app/: __init__.py  __main__.py
not_llama_fs/fs/: fs_writer.py  tree.py
not_llama_fs/producers/: claude_producer.py  groq_producer.py  interface.py  llama_producer.py  ollama_producer.py  openai_producer.py
